2010-02-05  David Reveman  <davidr@novell.com>

	* effect.h:
	* effect.cpp: Add GetTopPadding, GetBottomPadding,
	GetLeftPadding and GetRightPadding functions.
	* uielement.cpp: Use new padding functions.

	* effect.h:
	* effect.cpp: Use RUNTIME_DEBUG_EFFECT instead MOON_EFFECT_DEBUG
	environment variable.

	* debug.h:
	* runtime.cpp:
	* runtime.h: Add RUNTIME_DEBUG_EFFECT.

	* effect.cpp: Remove gallium code from debug output instead of
	USE_GALLIUM def.

2010-02-05  Jackson Harper  <jackson@ximian.com>

	* effect.cpp: Make debug output use the USE_GALLIUM def.

2010-02-05  David Reveman  <davidr@novell.com>

	* effect.cpp: Cleanup debug output.

2010-02-05  Sebastien Pouliot  <sebastien@ximian.com>

	* runtime.cpp|h: Add a monotonic user-initiated counter so
	we can ensure some actions (like PopupWindow) cannot occur
	more than once per user-initiated event.

2010-02-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pal/gtk/window-gtk.cpp: Make both conditions of the #if FFMPEG
	condition compilable.

2010-02-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp: Don't optimize seeks to the current position. It
	breaks the olympics site.

2010-02-05  Sebastien Pouliot  <sebastien@ximian.com>

	* runtime.cpp (HandleUIButtonPress): Make sure we always set
	user_initiated to false before returning.

2010-02-04  Larry Ewing  <lewing@novell.com>

	* pal/gtk/window-gtk.cpp (show_fps): call SetCurrentDeployment
	before trying to make parser calls.

	Fixes a crash when turning on the fps dialog in some cases.

2010-02-04  Chris Toshok  <toshok@ximian.com>

	* runtime.cpp (HideDrmMessage): remove the check for
	focused_element here.
	(HideIncompleteSilverlightSupportMessage): same here.
	(Surface::DetachLayer): fix it in a more general way here.  If the
	input list was from the layer we're detaching, clear the input
	list entirely.  Also, if the focused element was anywhere in that
	layer, clear that as well.

2010-02-04  Chris Toshok  <toshok@ximian.com>
